@@ -1,0 +1,3 @@
+stdio_IMPORTS_start
+I_printf
+stdio_IMPORTS_end
